# gha-workflows-checker

./: README.md  orgs_repos.yaml  setup.cfg
.github/workflows/: codeql-analysis.yaml
envs/: environment-dev.yaml  requirements.txt
gha_workflows_checker/: __init__.py  gha_workflows_checker.py
